add feature checkbox with basic scenarios

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -3,11 +3,15 @@
     This page is used to test Cello Framwork
   </div>
   <div>
-    <div> <p></b>Textfield:</b></p>
+    <div> <p><b>Textfield:</b></p>
       <div>Textfield with id text1</div><div> <input id='text1' type='text'></div>
       <div>Textfield with name text1</div><div> <input name='text1' type='text'></div>
     </div>
   <div>
+    <div> <p><b>Simple Checkbox:</b></p>
+      <div>Checkbox with id check1</div><div> <input id='check1' type='checkbox'></div>
+      <div>Checkbox with name check1</div><div> <input name='check1' type='checkbox'></div>
+    </div>
   </div>
   <div>
   </div>
