adding textarea and some improvements

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -7,34 +7,15 @@
       <div>Textfield with id text1</div><div> <input id='text1' type='text'></div>
       <div>Textfield with name text1</div><div> <input name='text1' type='text'></div>
     </div>
+  </div>  
   <div>
     <div> <p><b>Simple Checkbox:</b></p>
       <div>Checkbox with id check1</div><div> <input id='check1' type='checkbox'></div>
-      <div>Checkbox with name check1</div><div> <input name='check1' type='checkbox'></div>
     </div>
   </div>
   <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
-  </div>
-  <div>
+    <div> <p><b>TextArea:</b></p>
+      <div>Textarea with id area1</div><div> <textarea id='area1' type='checkbox'></textarea></div>
+    </div>
   </div>
 </html>
