fixing textarea enable method issue and html

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -15,7 +15,7 @@
   </div>
   <div>
     <div> <p><b>TextArea:</b></p>
-      <div>Textarea with id area1</div><div> <textarea id='area1' type='checkbox'></textarea></div>
+      <div>Textarea with id area1</div><div> <textarea id='area1'></textarea></div>
     </div>
   </div>
 </html>
