adding new features for radio and dls mechanism

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -18,4 +18,21 @@
       <div>Textarea with id area1</div><div> <textarea id='area1'></textarea></div>
     </div>
   </div>
+  <div>
+    <div> <p><b>Radio:</b></p>
+      <input type="radio" name="items">Selenium-Webdriver</input>
+      <input type="radio" name="items">Ruby</input>
+      <input type="radio" name="items"><Cucumber/input>
+      <input type="radio" name="items">Watir-Webdriver</input>
+    </div>
+  </div>
 </html>
+
+
+
+
+
+
+
+
+
