adding new features and fixing build

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -20,10 +20,10 @@
   </div>
   <div>
     <div> <p><b>Radio:</b></p>
-      <input type="radio" name="items">Selenium-Webdriver</input>
-      <input type="radio" name="items">Ruby</input>
-      <input type="radio" name="items"><Cucumber/input>
-      <input type="radio" name="items">Watir-Webdriver</input>
+      <input type="radio" name="items" value="Selenium-Webdriver">
+      <input type="radio" name="items" value="Ruby">
+      <input type="radio" name="items" value="Cucumber">
+      <input type="radio" name="items" value=">Watir-Webdriver">
     </div>
   </div>
 </html>
