Radios interface feature complete

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -20,10 +20,10 @@
   </div>
   <div>
     <div> <p><b>Radio:</b></p>
-      <input type="radio" name="items" value="Selenium-Webdriver">
-      <input type="radio" name="items" value="Ruby">
-      <input type="radio" name="items" value="Cucumber">
-      <input type="radio" name="items" value=">Watir-Webdriver">
+      <input type="radio" name="items" value="Selenium-Webdriver">Selenium-Webdriver</input>
+      <input type="radio" name="items" value="Ruby">Ruby</input>
+      <input type="radio" name="items" value="Cucumber">Cucumber</input>
+      <input type="radio" name="items" value=">Watir-Webdriver">Watir-Webdriver</input>
     </div>
   </div>
 </html>
