adding element tests for radio

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -26,6 +26,11 @@
       <input type="radio" name="items" value=">Watir-Webdriver">Watir-Webdriver</input>
     </div>
   </div>
+  <div>
+    <div> <p><b>Simple Checkbox:</b></p>
+      <div>Link to another page/div><div> <a id='check1' href='./read_page.html'>Link</a>
+    </div>
+  </div>
 </html>
 
 
