add get values for select

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -27,10 +27,23 @@
     </div>
   </div>
   <div>
-    <div> <p><b>Simple Checkbox:</b></p>
-      <div>Link to another page/div><div> <a id='check1' href='./read_page.html'>Link</a>
+    <div> <p><b>Link:</b></p>
+      <div>Link to other page</div><div> <a id='check1' href='./read_page.html'>Link</a>
     </div>
   </div>
+  <div>
+    <div> <p><b>Simple Select:</b></p>
+      <div>Select example</div><div> 
+        <select id="select1">
+          <option value="">...</option>
+          <option value="cello">Cello</option>
+          <option value="cucumber">Cucumber</option>
+          <option value="ruby">Ruby</option>
+          <option value="rspec">Rspec</option>
+         <option value="qa">QA Rocks!</option>
+        </select>
+      </div>
+    </div>
 </html>
 
 
