adding link to read_page

--- a/features/site/inputs.html
+++ b/features/site/inputs.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title> Inputs page </title>
+  </head>
   <div>
     This page is used to test Cello Framwork
   </div>
@@ -28,7 +31,7 @@
   </div>
   <div>
     <div> <p><b>Link:</b></p>
-      <div>Link to other page</div><div> <a id='check1' href='./read_page.html'>Link</a>
+      <div>Link to other page</div><div> <a id='link1' href='./read_page.html'>Link</a>
     </div>
   </div>
   <div>
